# Cpp-Core

const/: const.cpp
inline/: inline.cpp  inline.hpp
move-semantics/: CMakeLists.txt  l-rvalues.cpp  move-semantics.cpp
static/: CMakeLists.txt  main.cpp  static.cpp  static.hpp  static_.cpp
